# telegram-project

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py  script.py.mako
alembic/versions/: 2025_11_11_000001_init.py  2025_11_13_000002_ai_comments.py  2025_11_16_000003_topics.py  2025_11_16_000004_topic_snapshots.py  2025_11_16_000005_projects.py
src/tg_events/: api.py  config.py  db.py
src/tg_events/ai/: commenter.py
src/tg_events/ingest/: service.py  telethon_client.py
src/tg_events/miniapp_static/: index.html  main.js  styles.css
src/tg_events/models/: __init__.py  base.py  models.py
src/tg_events/repositories/: channels.py  messages.py  miniapp_queries.py
src/tg_events/scripts/: check_duplicates.py  dump_channel.py  find_posts_by_substring.py  list_dialogs.py  test_gpt5.py  test_gpt5_chat.py  tg_auth.py
